tests/ui/allocator/not-an-allocator.stderr
error[E0277]: the trait bound `usize: GlobalAlloc` is not satisfied
  --> $DIR/not-an-allocator.rs:2:11
   |
LL | #[global_allocator]
   | ------------------- in this attribute macro expansion
LL | static A: usize = 0;
   |           ^^^^^ the trait `GlobalAlloc` is not implemented for `usize`
   |
   = help: the trait `GlobalAlloc` is implemented for `System`

error[E0277]: the trait bound `usize: GlobalAlloc` is not satisfied
  --> $DIR/not-an-allocator.rs:2:11
   |
LL | #[global_allocator]
   | ------------------- in this attribute macro expansion
LL | static A: usize = 0;
   |           ^^^^^ the trait `GlobalAlloc` is not implemented for `usize`
   |
   = help: the trait `GlobalAlloc` is implemented for `System`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: the trait bound `usize: GlobalAlloc` is not satisfied
  --> $DIR/not-an-allocator.rs:2:11
   |
LL | #[global_allocator]
   | ------------------- in this attribute macro expansion
LL | static A: usize = 0;
   |           ^^^^^ the trait `GlobalAlloc` is not implemented for `usize`
   |
   = help: the trait `GlobalAlloc` is implemented for `System`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0277]: the trait bound `usize: GlobalAlloc` is not satisfied
  --> $DIR/not-an-allocator.rs:2:11
   |
LL | #[global_allocator]
   | ------------------- in this attribute macro expansion
LL | static A: usize = 0;
   |           ^^^^^ the trait `GlobalAlloc` is not implemented for `usize`
   |
   = help: the trait `GlobalAlloc` is implemented for `System`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
